Read gateway URL from config file, fix css issue
