# app/controllers.go
@@ -271,28 +271,28 @@ type PublicController interface {
 func MountPublicController(service *goa.Service, ctrl PublicController) {
 	initService(service)
 	var h goa.Handler
-	service.Mux.Handle("OPTIONS", "/css/*filepath", ctrl.MuxHandler("preflight", handlePublicOrigin(cors.HandlePreflight()), nil))
-	service.Mux.Handle("OPTIONS", "/js/*filepath", ctrl.MuxHandler("preflight", handlePublicOrigin(cors.HandlePreflight()), nil))
+	service.Mux.Handle("OPTIONS", "/saml/css/*filepath", ctrl.MuxHandler("preflight", handlePublicOrigin(cors.HandlePreflight()), nil))
+	service.Mux.Handle("OPTIONS", "/saml/js/*filepath", ctrl.MuxHandler("preflight", handlePublicOrigin(cors.HandlePreflight()), nil))
 
-	h = ctrl.FileHandler("/css/*filepath", "public/css")
+	h = ctrl.FileHandler("/saml/css/*filepath", "public/css")
 	h = handlePublicOrigin(h)
-	service.Mux.Handle("GET", "/css/*filepath", ctrl.MuxHandler("serve", h, nil))
-	service.LogInfo("mount", "ctrl", "Public", "files", "public/css", "route", "GET /css/*filepath")
+	service.Mux.Handle("GET", "/saml/css/*filepath", ctrl.MuxHandler("serve", h, nil))
+	service.LogInfo("mount", "ctrl", "Public", "files", "public/css", "route", "GET /saml/css/*filepath")
 
-	h = ctrl.FileHandler("/js/*filepath", "public/js")
+	h = ctrl.FileHandler("/saml/js/*filepath", "public/js")
 	h = handlePublicOrigin(h)
-	service.Mux.Handle("GET", "/js/*filepath", ctrl.MuxHandler("serve", h, nil))
-	service.LogInfo("mount", "ctrl", "Public", "files", "public/js", "route", "GET /js/*filepath")
+	service.Mux.Handle("GET", "/saml/js/*filepath", ctrl.MuxHandler("serve", h, nil))
+	service.LogInfo("mount", "ctrl", "Public", "files", "public/js", "route", "GET /saml/js/*filepath")
 
-	h = ctrl.FileHandler("/css/", "public/css/index.html")
+	h = ctrl.FileHandler("/saml/css/", "public/css/index.html")
 	h = handlePublicOrigin(h)
-	service.Mux.Handle("GET", "/css/", ctrl.MuxHandler("serve", h, nil))
-	service.LogInfo("mount", "ctrl", "Public", "files", "public/css/index.html", "route", "GET /css/")
+	service.Mux.Handle("GET", "/saml/css/", ctrl.MuxHandler("serve", h, nil))
+	service.LogInfo("mount", "ctrl", "Public", "files", "public/css/index.html", "route", "GET /saml/css/")
 
-	h = ctrl.FileHandler("/js/", "public/js/index.html")
+	h = ctrl.FileHandler("/saml/js/", "public/js/index.html")
 	h = handlePublicOrigin(h)
-	service.Mux.Handle("GET", "/js/", ctrl.MuxHandler("serve", h, nil))
-	service.LogInfo("mount", "ctrl", "Public", "files", "public/js/index.html", "route", "GET /js/")
+	service.Mux.Handle("GET", "/saml/js/", ctrl.MuxHandler("serve", h, nil))
+	service.LogInfo("mount", "ctrl", "Public", "files", "public/js/index.html", "route", "GET /saml/js/")
 }
 
 // handlePublicOrigin applies the CORS response headers corresponding to the origin.
